--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
   <meta name="author" content="Беляев Александр">
   <link rel="icon" href="src/img/favicon2.ico">
   <title>Starter Template for Bootstrap</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-  <link href="starter-template.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet"	href="src/css/style.css" >
  </head>
 
  <body>
+		<div class="video">
+			<video class="video_init" src="src/videos/crusaders.mp4" autoplay muted loop>
+
+			</video>
+		</div>
+
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
