--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
  </head>
 
  <body>
-		<div class="video">
-			<video class="video_init" src="src/videos/crusaders.mp4" autoplay muted loop>
+ 	<div class="intro">
+			<div class="video">
+				<video class="video_init" src="src/videos/crusaders.mp4" autoplay muted loop>
 
-			</video>
+				</video>
+			</div>
 		</div>
-
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
