--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <body>
  	<div class="intro">
 			<div class="video">
-				<video class="video_init" src="src/videos/crusaders.mp4" autoplay muted loop>
+				<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted loop>
 
 				</video>
 			</div>
