--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
  <body>
  	<div class="intro">
 			<div class="video">
-				<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted loop>
-
-				</video>
+				<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted loop></video>
+			</div>
+			<div class="intro_content">
+				
 			</div>
 		</div>
 
