--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 				<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted loop></video>
 			</div>
 			<div class="intro_content">
-				hi
+				Сайт находится в процессе разработки. Он запланирован как огромный портал посвященный крестовым походам и все что с ними связанно. 
+			</div>
+		</div>
+		<div class="header">
+			<img class="header_img" src="src/img/header_img.png">
+			<div class="header_speach">
+			
 			</div>
 		</div>
 
