--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Беляев Александр">
   <link rel="icon" href="src/img/favicon2.ico">
   <title>Starter Template for Bootstrap</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet"	href="src/css/style.css" >
  </head>
 
@@ -17,10 +17,31 @@
 				<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted loop></video>
 			</div>
 			<div class="intro_content">
-				Сайт находится в процессе разработки. Он запланирован как огромный портал посвященный крестовым походам и все что с ними связанно. 
+				Сайт находится в процессе разработки. Здесь будет портал, посвященный крестовым походам и всему, что с ними связанно. 
 			</div>
 		</div>
 		<div class="header">
+			<div class="navbar navbar-inverse navbar-fixed-top">
+					<div class="container">
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+								<span class="incon-bar"></span>
+								<span class="incon-bar"></span>
+								<span class="incon-bar"></span>
+							</button>
+							<a class="navbar-brand" href="#">Крестоносец</a>
+						</div>
+						<div class="navbar-collapse collapse">
+							<ul class="nav navbar-nav navbar-right">
+								<li class="active"><a href="#">Домой</a></li>
+								<li><a href="#">Второе</a></li>
+								<li><a href="#">Третье</a></li>
+								<li><a href="#">Четвертое</a></li>
+								<li><a href="#">Пятое</a></li>
+							</ul>
+						</div>
+					</div>
+			</div>
 			<img class="header_img" src="src/img/header_img.png">
 			<div class="header_speach">
 			
@@ -28,8 +49,8 @@
 		</div>
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
  </body>
 </html>
