--- a/index.html
+++ b/index.html
@@ -1,68 +1,68 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	 <meta charset="utf-8">
-	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <meta name="author" content="Беляев Александр">
-	 <link rel="icon" href="src/img/favicon2.ico">
-	 <title>Сайт о крестоносцах</title>
-	 <link rel="stylesheet" href="src/css/bootstrap.css">
-	 <link rel="stylesheet"	href="src/css/style.css">
+ <meta charset="utf-8">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta name="author" content="Беляев Александр">
+ <link rel="icon" href="src/img/favicon3.ico">
+ <title>Сайт о крестоносцах</title>
+ <link rel="stylesheet" href="src/css/bootstrap.css">
+ <link rel="stylesheet"	href="src/css/style.css">
 </head>
 
 <header>
-		<div class="intro">
-				<div class="video">
-						<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted loop></video>
-				</div>
-				<div class="intro_content">
-						Сайт находится в процессе разработки. Здесь будет портал, посвященный крестовым походам и всему, что с ними связанно. 
-				</div>
+	<div class="intro">
+		<div class="video">
+			<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted><!-- loop --></video>
 		</div>
+		<div class="intro_content">
+			Сайт находится в процессе разработки. Здесь будет портал, посвященный крестовым походам и всему, что с ними связанно. 
+		</div>
+	</div>
 </header>
 
 <body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	 		<a class="navbar-brand" href="#">Navbar</a>
-	 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	  	<span class="navbar-toggler-icon"></span>
-	 		</button>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">сrusa<div class="label"></div>er</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	 	<span class="navbar-toggler-icon"></span>
+		</button>
 
-		 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			   <ul class="navbar-nav mr-auto">
-			     <li class="nav-item active">
-			       <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-			     </li>
-			     <li class="nav-item">
-			       <a class="nav-link" href="#">Link</a>
-			     </li>
-			     <li class="nav-item dropdown">
-			       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			         Dropdown
-			       </a>
-			       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			         <a class="dropdown-item" href="#">Action</a>
-			         <a class="dropdown-item" href="#">Another action</a>
-			         <div class="dropdown-divider"></div>
-			         <a class="dropdown-item" href="#">Something else here</a>
-			       </div>
-			     </li>
-			     <li class="nav-item">
-			       <a class="nav-link disabled" href="#">Disabled</a>
-			     </li>
-			   </ul>
-			   <form class="form-inline my-2 my-lg-0">
-			     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-			     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Найти</button>
-			   </form>
-		 	</div>
-		</nav>
-		<img class="header_img" src="src/img/header_img.png">
-		<div class="header_speach"></div>
+ 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+	   <ul class="navbar-nav mr-auto">
+     <li class="nav-item active">
+      <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+     </li>
+     <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+       Dropdown
+      </a>
+     	<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+       <a class="dropdown-item" href="#">Action</a>
+       <a class="dropdown-item" href="#">Another action</a>
+       <div class="dropdown-divider"></div>
+       <a class="dropdown-item" href="#">Something else here</a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link disabled" href="#">
+      	Disabled</a>
+     </li>
+   </ul>
+   <form class="form-inline my-2 my-lg-0">
+   	<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Найти</button>
+   </form>
+ 	</div>
+	</nav>
+	<div class="intro_speach">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam harum repellendus voluptas, minima inventore esse tenetur itaque sit quasi ab qui repellat nostrum dolor commodi aspernatur molestiae libero. Aspernatur ea, culpa quisquam at veniam explicabo id enim alias placeat eaque debitis perspiciatis magnam aliquid assumenda ut dolorem architecto. Dolores quibusdam recusandae, consequatur autem quo placeat amet in, nesciunt, delectus architecto facilis ea eius et. Hic voluptatibus dicta in molestiae, doloremque iste ad facere vero deserunt nihil sunt, perferendis atque pariatur officiis! Quis saepe illo deleniti, provident odio quaerat iure ad distinctio autem excepturi optio ipsa cumque nulla voluptates deserunt nostrum aspernatur magnam maxime illum perspiciatis officia ipsam vitae numquam totam dolorem!</div>
 
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
