--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
 	<div class="intro">
 		<div class="video">
-			<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted><!-- loop --></video>
+			<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted loop><!-- loop --></video>
 		</div>
 		<div class="intro_content">
 			<div class="container">
@@ -47,11 +47,13 @@
      </li>
      <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-       Dropdown
+       Разделы
       </a>
      	<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-       <a class="dropdown-item" href="#">Action</a>
-       <a class="dropdown-item" href="#">Another action</a>
+       <a class="dropdown-item" href="#">История походов</a>
+       <a class="dropdown-item" href="#">Все об орденах</a>
+       <a class="dropdown-item" href="#">Выдающиеся крестоносцы</a>
+       <a class="dropdown-item" href="#">Оружие и броня</a>
        <div class="dropdown-divider"></div>
        <a class="dropdown-item" href="#">Something else here</a>
       </div>
@@ -71,20 +73,22 @@
 		<div class="row justify-content-lg-center">
 			<div class="intro_speach">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam harum repellendus voluptas, minima inventore esse tenetur itaque sit quasi ab qui repellat nostrum dolor commodi aspernatur molestiae libero. Aspernatur ea, culpa quisquam at veniam explicabo id enim alias placeat eaque debitis perspiciatis magnam aliquid assumenda ut dolorem architecto. Dolores quibusdam recusandae, consequatur autem quo placeat amet in, nesciunt, delectus architecto facilis ea eius et. Hic voluptatibus dicta in molestiae, doloremque iste ad facere vero deserunt nihil sunt, perferendis atque pariatur officiis! Quis saepe illo deleniti, provident odio quaerat iure ad distinctio autem excepturi optio ipsa cumque nulla voluptates deserunt nostrum aspernatur magnam maxime illum perspiciatis officia ipsam vitae numquam totam dolorem!</div>
 		</div>
-		<div class="row justify-content-center">
-    <div class="col-6">
-      Pict1
-    </div>
-    <div class="col-6">
-      Pict2
-    </div>
-    <div class="col-6">
-      Pict3
-    </div>
-    <div class="col-6">
-      Pict4
-    </div>
-  </div>
+		<div class="menu">
+			<div class="row justify-content-center">
+		    <div class="col-6">
+		      <a href="src/history.html">История походов</a>
+		    </div>
+		    <div class="col-6">
+		      <a href="src/order.html">Все об орденах</a>
+		    </div>
+		    <div class="col-6">
+		      <a href="src/persons.html">Выдающиеся крестоносцы</a>
+		    </div>
+		    <div class="col-6">
+		      <a href="src/weapon.html">Оружие и броня</a>
+		    </div>
+	    </div>
+ 		</div>
 	</div>
 </body>
 <footer>
