--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 	</div>
 </header>
 
-<body>
+<div class="background_main">
+<div class="background_wrap">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="#">сrusa<div class="label"></div>er</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,24 +77,24 @@
 		<div class="menu">
 			<div class="row justify-content-center">
 		    <div class="col-6">
-		      <a href="src/history.html">История походов</a>
+		      <a class="btn btn-primary btn-history" href="src/history.html" role="button">История походов</a>
 		    </div>
 		    <div class="col-6">
-		      <a href="src/order.html">Все об орденах</a>
+		      <a class="btn btn-primary btn-order" href="src/order.html">Все об орденах</a>
 		    </div>
 		    <div class="col-6">
-		      <a href="src/persons.html">Выдающиеся крестоносцы</a>
+		      <a class="btn btn-primary btn-persons" href="src/persons.html">Выдающиеся крестоносцы</a>
 		    </div>
 		    <div class="col-6">
-		      <a href="src/weapon.html">Оружие и броня</a>
+		      <a class="btn btn-primary btn-weapon" href="src/weapon.html">Оружие и броня</a>
 		    </div>
 	    </div>
  		</div>
 	</div>
-</body>
-<footer>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </footer>
+</div>
+</div>
 </html>
