--- a/index.html
+++ b/index.html
@@ -30,46 +30,47 @@
 	</div>
 </header>
 
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light nav_main">
+	<a class="navbar-brand" href="#">сrusa<div class="label"></div>er</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+ 	<span class="navbar-toggler-icon"></span>
+	</button>
+
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+   <ul class="navbar-nav mr-auto">
+	   <li class="nav-item active">
+	    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+	   </li>
+	   <li class="nav-item">
+	    <a class="nav-link" href="#">Link</a>
+	   </li>
+	   <li class="nav-item dropdown">
+	    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	     Разделы
+	    </a>
+	   	<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	     <a class="dropdown-item" href="#">История походов</a>
+	     <a class="dropdown-item" href="#">Все об орденах</a>
+	     <a class="dropdown-item" href="#">Выдающиеся крестоносцы</a>
+	     <a class="dropdown-item" href="#">Оружие и броня</a>
+	     <div class="dropdown-divider"></div>
+	     <a class="dropdown-item" href="#">Something else here</a>
+	    </div>
+	   </li>
+	   <li class="nav-item">
+	    <a class="nav-link disabled" href="#">Disabled</a>
+	   </li>
+ 		</ul>
+	 	<form class="form-inline my-2 my-lg-0">
+	 		<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	  	<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Найти</button>
+	 	</form>
+	</div>
+</nav>
+
 <div class="background_main">
 <div class="background_wrap">
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">сrusa<div class="label"></div>er</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	 	<span class="navbar-toggler-icon"></span>
-		</button>
-
- 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-	   <ul class="navbar-nav mr-auto">
-     <li class="nav-item active">
-      <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-     </li>
-     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-     </li>
-     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-       Разделы
-      </a>
-     	<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-       <a class="dropdown-item" href="#">История походов</a>
-       <a class="dropdown-item" href="#">Все об орденах</a>
-       <a class="dropdown-item" href="#">Выдающиеся крестоносцы</a>
-       <a class="dropdown-item" href="#">Оружие и броня</a>
-       <div class="dropdown-divider"></div>
-       <a class="dropdown-item" href="#">Something else here</a>
-      </div>
-     </li>
-     <li class="nav-item">
-      <a class="nav-link disabled" href="#">
-      	Disabled</a>
-     </li>
-   </ul>
-   <form class="form-inline my-2 my-lg-0">
-   	<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Найти</button>
-   </form>
- 	</div>
-	</nav>
 	<div class="container">
 		<div class="row justify-content-lg-center">
 			<div class="intro_speach">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam harum repellendus voluptas, minima inventore esse tenetur itaque sit quasi ab qui repellat nostrum dolor commodi aspernatur molestiae libero. Aspernatur ea, culpa quisquam at veniam explicabo id enim alias placeat eaque debitis perspiciatis magnam aliquid assumenda ut dolorem architecto. Dolores quibusdam recusandae, consequatur autem quo placeat amet in, nesciunt, delectus architecto facilis ea eius et. Hic voluptatibus dicta in molestiae, doloremque iste ad facere vero deserunt nihil sunt, perferendis atque pariatur officiis! Quis saepe illo deleniti, provident odio quaerat iure ad distinctio autem excepturi optio ipsa cumque nulla voluptates deserunt nostrum aspernatur magnam maxime illum perspiciatis officia ipsam vitae numquam totam dolorem!</div>
@@ -77,24 +78,46 @@
 		<div class="menu">
 			<div class="row justify-content-center">
 		    <div class="col-6">
-		      <a class="btn btn-primary btn-history" href="src/history.html" role="button">История походов</a>
+		      <a class="btn btn-primary btn-history" href="src/history.html" role="button"></a>
 		    </div>
 		    <div class="col-6">
-		      <a class="btn btn-primary btn-order" href="src/order.html">Все об орденах</a>
+		      <a class="btn btn-primary btn-order" href="src/order.html"></a>
 		    </div>
 		    <div class="col-6">
-		      <a class="btn btn-primary btn-persons" href="src/persons.html">Выдающиеся крестоносцы</a>
+		      <div class="pict_sign">История походов</div>
 		    </div>
 		    <div class="col-6">
-		      <a class="btn btn-primary btn-weapon" href="src/weapon.html">Оружие и броня</a>
+		      <div class="pict_sign">Все об орденах</div>
+		    </div>
+		    <div class="col-6">
+		      <a class="btn btn-primary btn-persons" href="src/persons.html"></a>
+		    </div>
+		    <div class="col-6">
+		      <a class="btn btn-primary btn-weapon" href="src/weapon.html"></a>
+		    </div>
+		    <div class="col-6">
+		      <div class="pict_sign">Выдающиеся крестоносцы</div>
+		    </div>
+		    <div class="col-6">
+		      <div class="pict_sign">Вооружение и защита</div>
 		    </div>
 	    </div>
  		</div>
 	</div>
+</div>
+</div>
+
+<footer>
+	<div class="container">
+		<div class="row justify-content-lg-center">
+			<div class="footer_speach">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ipsum perspiciatis cumque sed, exercitationem nisi consequuntur, delectus voluptatibus adipisci esse itaque ab quasi. Quod provident accusantium quos. Quam, molestiae. Quo, tempore, perferendis. Temporibus dolores doloribus ad culpa recusandae beatae quos molestias corporis odit inventore eos aliquam, quas odio, iure, minima, rem mollitia similique neque tempore minus dolorem? Animi eos, eveniet consequuntur deserunt qui, accusamus veniam rem at rerum numquam voluptatibus facere ea ipsa, dolorum magni velit ratione, nesciunt neque? Repellat tempore quibusdam ipsa saepe dolor vel repudiandae eius earum molestiae consequatur! Praesentium tempore iste voluptatum, ipsum tenetur incidunt natus minus nisi, corporis mollitia. Aut magnam temporibus dolorem velit, perspiciatis nostrum at similique esse rem aliquam, architecto sint. Architecto perspiciatis laudantium nisi quam a illum quisquam odio iusto officiis, nemo voluptatem, saepe illo animi sit, ex minima neque mollitia, dolorem eveniet quibusdam quos quia excepturi ipsa. Voluptate harum perferendis esse facere!</p>
+			</div>
+		</div>
+	</div>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </footer>
-</div>
-</div>
+
 </html>
