--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 	</div>
 </header>
 
+<body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light nav_main">
-	<a class="navbar-brand" href="#">сrusa<div class="label"></div>er</a>
+<nav class="navbar navbar-expand-lg nav_main">
+	<a class="navbar-brand" href="#">Crusa<div class="label"></div>er</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
  	<span class="navbar-toggler-icon"></span>
 	</button>
@@ -40,13 +41,13 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
    <ul class="navbar-nav mr-auto">
 	   <li class="nav-item active">
-	    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+	    <a class="nav-link nav_main_btn" href="#">Home<span class="sr-only">(current)</span></a>
 	   </li>
 	   <li class="nav-item">
-	    <a class="nav-link" href="#">Link</a>
+	    <a class="nav-link nav_main_btn" href="#">Link</a>
 	   </li>
 	   <li class="nav-item dropdown">
-	    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	    <a class="nav-link dropdown-toggle nav_main_btn" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	     Разделы
 	    </a>
 	   	<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -59,7 +60,7 @@
 	    </div>
 	   </li>
 	   <li class="nav-item">
-	    <a class="nav-link disabled" href="#">Disabled</a>
+	    <a class="nav-link nav_main_btn" href="#">Disabled</a>
 	   </li>
  		</ul>
 	 	<form class="form-inline my-2 my-lg-0">
@@ -73,7 +74,7 @@
 <div class="background_wrap">
 	<div class="container">
 		<div class="row justify-content-lg-center">
-			<div class="intro_speach">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam harum repellendus voluptas, minima inventore esse tenetur itaque sit quasi ab qui repellat nostrum dolor commodi aspernatur molestiae libero. Aspernatur ea, culpa quisquam at veniam explicabo id enim alias placeat eaque debitis perspiciatis magnam aliquid assumenda ut dolorem architecto. Dolores quibusdam recusandae, consequatur autem quo placeat amet in, nesciunt, delectus architecto facilis ea eius et. Hic voluptatibus dicta in molestiae, doloremque iste ad facere vero deserunt nihil sunt, perferendis atque pariatur officiis! Quis saepe illo deleniti, provident odio quaerat iure ad distinctio autem excepturi optio ipsa cumque nulla voluptates deserunt nostrum aspernatur magnam maxime illum perspiciatis officia ipsam vitae numquam totam dolorem!</div>
+			<div class="intro_speach"> Крестовые походы Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam harum repellendus voluptas, minima inventore esse tenetur itaque sit quasi ab qui repellat nostrum dolor commodi aspernatur molestiae libero. Aspernatur ea, culpa quisquam at veniam explicabo id enim alias placeat eaque debitis perspiciatis magnam aliquid assumenda ut dolorem architecto. Dolores quibusdam recusandae, consequatur autem quo placeat amet in, nesciunt, delectus architecto facilis ea eius et. Hic voluptatibus dicta in molestiae, doloremque iste ad facere vero deserunt nihil sunt, perferendis atque pariatur officiis! Quis saepe illo deleniti, provident odio quaerat iure ad distinctio autem excepturi optio ipsa cumque nulla voluptates deserunt nostrum aspernatur magnam maxime illum perspiciatis officia ipsam vitae numquam totam dolorem!</div>
 		</div>
 		<div class="menu">
 			<div class="row justify-content-center">
@@ -106,7 +107,7 @@
 	</div>
 </div>
 </div>
-
+</body>
 <footer>
 	<div class="container">
 		<div class="row justify-content-lg-center">
