--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
    <ul class="navbar-nav mr-auto">
 	   <li class="nav-item active">
-	    <a class="nav-link nav_main_btn" href="#">Home<span class="sr-only">(current)</span></a>
+	    <a class="nav-link nav_main_btn" href="#">Главная<span class="sr-only">(current)</span></a>
 	   </li>
 	   <li class="nav-item">
 	    <a class="nav-link nav_main_btn" href="#">Link</a>
@@ -64,7 +64,7 @@
 	   </li>
  		</ul>
 	 	<form class="form-inline my-2 my-lg-0">
-	 		<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	 		<input class="form-control mr-sm-2" type="search" placeholder="Поиск по сайту" aria-label="Search">
 	  	<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Найти</button>
 	 	</form>
 	</div>
