--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
 <header>
 	<div class="intro">
 		<div class="video">
-			<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted loop><!-- loop --></video>
+			<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted loop></video>
 		</div>
-		<div class="intro_content">
-			<div class="container">
-				<div class="row">
-					<div class="col align-self-center">
-						<h1 class="intro_title">
-						Сайт находится в процессе разработки. Здесь будет портал, посвященный крестовым походам и всему, что с ними связанно. 
-						</h1>
-					</div>
+		<div class="container">
+			<div class="row align-items-center intro_row">
+				<div class="col-md-6 ml-auto mr-auto">
+					<h1 class="intro_title">
+					Сайт находится в процессе разработки. Здесь будет портал, посвященный крестовым походам и всему, что с ними связанно. 
+					</h1>
 				</div>
 			</div>
 		</div>
@@ -31,11 +29,10 @@
 </header>
 
 <body>
-
-<nav class="navbar navbar-expand-lg nav_main">
-	<a class="navbar-brand" href="#">Crusa<div class="label"></div>er</a>
+<nav class="navbar navbar-expand-lg nav_main sticky-top">
+	<div class="navbar-brand">Crusa<div class="label"></div>er</div>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
- 	<span class="navbar-toggler-icon"></span>
+  <span class="navbar-toggler-icon"></span>
 	</button>
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -44,7 +41,7 @@
 	    <a class="nav-link nav_main_btn" href="#">Главная<span class="sr-only">(current)</span></a>
 	   </li>
 	   <li class="nav-item">
-	    <a class="nav-link nav_main_btn" href="#">Link</a>
+	    <a class="nav-link nav_main_btn" href="#">Источники</a>
 	   </li>
 	   <li class="nav-item dropdown">
 	    <a class="nav-link dropdown-toggle nav_main_btn" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -56,14 +53,14 @@
 	     <a class="dropdown-item" href="#">Выдающиеся крестоносцы</a>
 	     <a class="dropdown-item" href="#">Оружие и броня</a>
 	     <div class="dropdown-divider"></div>
-	     <a class="dropdown-item" href="#">Something else here</a>
+	     <a class="dropdown-item" href="#">Предложения по содержанию</a>
 	    </div>
 	   </li>
 	   <li class="nav-item">
 	    <a class="nav-link nav_main_btn" href="#">Disabled</a>
 	   </li>
  		</ul>
-	 	<form class="form-inline my-2 my-lg-0">
+	 	<form class="form-inline my-2 my-lg-0 main_form">
 	 		<input class="form-control mr-sm-2" type="search" placeholder="Поиск по сайту" aria-label="Search">
 	  	<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Найти</button>
 	 	</form>
@@ -116,6 +113,15 @@
 			</div>
 		</div>
 	</div>
+	<!-- <script>
+		$(document).scroll (function () {
+			if($(document).scrollTop () > $('header').height())
+				$('nav').addClass('fixed');
+			else
+				$('nav').removeClass ('fixed');
+	
+		});
+	</script> -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
