--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<video class="video_intro" src="src/videos/crusaders.mp4" autoplay muted loop></video>
 		</div>
 		<div class="container">
-			<div class="row align-items-center intro_row">
-				<div class="col-md-4 ml-auto mr-auto">
+			<div class="intro_row">
+				<div class="col-12 col-md-4 ml-auto mr-auto">
 					<h1 class="intro_title">
 					CRUSADER
 					</h1>
@@ -74,34 +74,27 @@
 <div class="background_wrap">
 	<div class="container">
 		<div class="row justify-content-lg-center">
-			<div class="intro_speach"> Покорив мусульманские области Ближнего Востока, сельджуки не остановились и вторглись на византийские территории. В Византии вспыхнула паника. Её император Роман IV попытался остановить завоевателей, но в 1071 г., в битве при городе Манцикерте, византийское войско потерпело сокрушительное поражение, а сам он попал в плен. После этого у византийцев уже не было сил сопротивляться. Сельджуки, постепенно продвигаясь на запад, отняли у Византии почти всю Малую Азию.
-
-			Хлынув в огромном количестве на христианские города и деревни, сельджуки нещадно их грабили, разоряли и жгли. Пылали и рушились церкви и монастыри. Завоеватели оскверняли христианские святыни, подвергали изощрённым пыткам, а затем убивали священников и монахов, принуждали местное население принимать ислам, истребляя тех, кто сопротивлялся. В 1071 г. в руки сельджуков перешёл Иерусалим, город Христа, со всеми главными святынями христиан. Новые хозяева города стали подвергать поруганию христианские храмы, ущемлять права местных христиан, чинить препятствия паломникам: их могли оскорбить, избить, продать в рабство или убить...</div>
+			<div class="col-12 col-md-12 intro_speach">
+				<p>Покорив мусульманские области Ближнего Востока, сельджуки не остановились и вторглись на византийские территории. В Византии вспыхнула паника. Её император Роман IV попытался остановить завоевателей, но в 1071 г., в битве при городе Манцикерте, византийское войско потерпело сокрушительное поражение, а сам он попал в плен. После этого у византийцев уже не было сил сопротивляться. Сельджуки, постепенно продвигаясь на запад, отняли у Византии почти всю Малую Азию.</p>
+				<p>Хлынув в огромном количестве на христианские города и деревни, сельджуки нещадно их грабили, разоряли и жгли. Пылали и рушились церкви и монастыри. Завоеватели оскверняли христианские святыни, подвергали изощрённым пыткам, а затем убивали священников и монахов, принуждали местное население принимать ислам, истребляя тех, кто сопротивлялся. В конечном итоге в руки сельджуков перешёл Иерусалим, город Христа, со всеми главными святынями христиан. Новые хозяева города стали подвергать поруганию христианские храмы, ущемлять права местных христиан, чинить препятствия паломникам: их могли оскорбить, избить, продать в рабство или убить...</p>
+			</div>
 		</div>
 		<div class="menu">
 			<div class="row justify-content-center">
-		    <div class="col-6">
-		      <a class="btn btn-history" href="src/history.html" role="button"></a> <!-- btn-primary -->
-		    </div>
-		    <div class="col-6">
-		      <a class="btn btn-order" href="src/order.html"></a>
-		    </div>
-		    <div class="col-6">
+		    <div class="col-12 col-md-6">
+		      <a class="btn btn-history" href="src/history.html" role="button"></a>
 		      <div class="pict_sign">История походов</div>
 		    </div>
-		    <div class="col-6">
-		      <div class="pict_sign">Все об орденах</div>
+		    <div class="col-12 col-md-6">
+		      <a class="btn btn-order" href="src/order.html"></a>
+					<div class="pict_sign">Все об орденах</div>
 		    </div>
-		    <div class="col-6">
+		    <div class="col-12 col-md-6">
 		      <a class="btn btn-persons" href="src/persons.html"></a>
-		    </div>
-		    <div class="col-6">
-		      <a class="btn btn-weapon" href="src/weapon.html"></a>
-		    </div>
-		    <div class="col-6">
 		      <div class="pict_sign">Известные крестоносцы</div>
 		    </div>
-		    <div class="col-6">
+		    <div class="col-12 col-md-6">
+		      <a class="btn btn-weapon" href="src/weapon.html"></a>
 		      <div class="pict_sign">Вооружение и защита</div>
 		    </div>
 	    </div>
@@ -113,7 +106,7 @@
 <footer>
 	<div class="container">
 		<div class="row justify-content-lg-center">
-			<div class="footer_speach">
+			<div class="col-12 col-md-12 intro_speach footer_speach">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ipsum perspiciatis cumque sed, exercitationem nisi consequuntur, delectus voluptatibus adipisci esse itaque ab quasi. Quod provident accusantium quos. Quam, molestiae. Quo, tempore, perferendis. Temporibus dolores doloribus ad culpa recusandae beatae quos molestias corporis odit inventore eos aliquam, quas odio, iure, minima, rem mollitia similique neque tempore minus dolorem? Animi eos, eveniet consequuntur deserunt qui, accusamus veniam rem at rerum numquam voluptatibus facere ea ipsa, dolorum magni velit ratione, nesciunt neque? Repellat tempore quibusdam ipsa saepe dolor vel repudiandae eius earum molestiae consequatur! Praesentium tempore iste voluptatum, ipsum tenetur incidunt natus minus nisi, corporis mollitia. Aut magnam temporibus dolorem velit, perspiciatis nostrum at similique esse rem aliquam, architecto sint. Architecto perspiciatis laudantium nisi quam a illum quisquam odio iusto officiis, nemo voluptatem, saepe illo animi sit, ex minima neque mollitia, dolorem eveniet quibusdam quos quia excepturi ipsa. Voluptate harum perferendis esse facere!</p>
 			</div>
 		</div>
