--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		</div>
 		<div class="container">
 			<div class="intro_row">
-				<div class="col-12 col-md-4 ml-auto mr-auto">
-					<h1 class="intro_title">
+				<div class="col-10 col-md-12 ml-auto mr-auto intro_wrap">
+					<h1 id="intro_brand">
 					CRUSADER
 					</h1>
-					<h2 class="intro_title">
-					Сайт о крестоносцах
-					</h2>
+					<h5 class="intro_title">
+					Подробно о крестоносцах и их походах
+					</h5>
 				</div>
 			</div>
 		</div>
@@ -44,7 +44,12 @@
 	    <a class="nav-link nav_main_btn" href="#">Главная<span class="sr-only">(current)</span></a>
 	   </li>
 	   <li class="nav-item">
-	    <a class="nav-link nav_main_btn" href="#">Источники</a>
+	    <div class="nav-link sources" href="#">Источники
+	    	<div class="descr_sources">
+				Wikipedia:
+				<a href="https://ru.wikipedia.org/wiki/%D0%9A%D1%80%D0%B5%D1%81%D1%82%D0%BE%D0%B2%D1%8B%D0%B5_%D0%BF%D0%BE%D1%85%D0%BE%D0%B4%D1%8B">Кретовые походы</a>
+				</div>
+			</div>
 	   </li>
 	   <li class="nav-item dropdown">
 	    <a class="nav-link dropdown-toggle nav_main_btn" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -105,9 +110,9 @@
 </body>
 <footer>
 	<div class="container">
-		<div class="row justify-content-lg-center">
+		<div class="row">
 			<div class="col-12 col-md-12 intro_speach footer_speach">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ipsum perspiciatis cumque sed, exercitationem nisi consequuntur, delectus voluptatibus adipisci esse itaque ab quasi. Quod provident accusantium quos. Quam, molestiae. Quo, tempore, perferendis. Temporibus dolores doloribus ad culpa recusandae beatae quos molestias corporis odit inventore eos aliquam, quas odio, iure, minima, rem mollitia similique neque tempore minus dolorem? Animi eos, eveniet consequuntur deserunt qui, accusamus veniam rem at rerum numquam voluptatibus facere ea ipsa, dolorum magni velit ratione, nesciunt neque? Repellat tempore quibusdam ipsa saepe dolor vel repudiandae eius earum molestiae consequatur! Praesentium tempore iste voluptatum, ipsum tenetur incidunt natus minus nisi, corporis mollitia. Aut magnam temporibus dolorem velit, perspiciatis nostrum at similique esse rem aliquam, architecto sint. Architecto perspiciatis laudantium nisi quam a illum quisquam odio iusto officiis, nemo voluptatem, saepe illo animi sit, ex minima neque mollitia, dolorem eveniet quibusdam quos quia excepturi ipsa. Voluptate harum perferendis esse facere!</p>
+				<p>Есть интересные предложения по содержанию? Обнаружили ошибку или неточность? - пришлите мне сообщение:</p>
 			</div>
 		</div>
 	</div>
