--- a/src/order.html
+++ b/src/order.html
@@ -8,7 +8,7 @@
  <link rel="icon" href="src/img/favicon3.ico">
  <title>Сайт о крестоносцах</title>
  <link rel="stylesheet" href="css/bootstrap.css">
- <link rel="stylesheet"	href="css/style.css">
+ <link rel="stylesheet"	href="css/order_style.css">
 </head>
 
 <body>
@@ -54,13 +54,14 @@
 	 	</form>
 	</div>
 </nav>
-	<section class="white"></section>
-	<section class="parallax-window" data-parallax="scroll" data-image-src="img/teutons_order.jpg"></section>
-	<section class="white"></section>
-	<section class="parallax-window" data-parallax="scroll" data-image-src="img/teutons_order.jpg"></section>
-	<section class="white"></section>
-	<section class="parallax-window" data-parallax="scroll" data-image-src="img/teutons_order.jpg"></section>
-	<section class="white"></section>
+
+	<section class="white parallax_section"></section>
+	<section class="parallax-window parallax_section" data-parallax="scroll" data-image-src="img/teutons_order.jpg"></section>
+	<section class="white parallax_section"></section>
+	<section class="parallax-window parallax_section" data-parallax="scroll" data-image-src="img/teutons_order.jpg"></section>
+	<section class="white parallax_section"></section>
+	<section class="parallax-window parallax_section" data-parallax="scroll" data-image-src="img/teutons_order.jpg"></section>
+	<section class="white parallax_section"></section>
 
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
